<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".LandingPageActivity">

        <!--Embedded System Image view-->
        <ImageView
            style="@style/ImageViews"
            android:src="@drawable/landing_page" />

        <!--Hello message view-->
        <TextView
            android:id="@+id/helloMessage_textView"
            style="@style/LandingPageTextViews"
            android:text="@string/hello_text_view" />

        <!--A grade Ticket message view-->
        <TextView
            style="@style/LandingPageTextViews"
            android:text="@string/ticket_text_view"
            android:textColor="@color/colorAccent" />

        <!--Start quiz button-->
        <Button
            style="@style/QuizAppButtons"
            android:onClick="startQuiz"
            android:text="@string/start_quiz_button" />

    </LinearLayout>

</ScrollView>